Add timeline page

--- a/_includes/about/me.html
+++ b/_includes/about/me.html
@@ -1,4 +1,4 @@
 <h2>Me</h2>
 <p>My name is Jakub Kadlčík, but you may also know me as FrostyX. I am 22 years old and live around Olomouc city in Czech Republic. I was born in Jeseník so I love mountains and the nature. In the not so distant past I loved sports (fitness, basketball, cycling, jogging), healthy lifestyle and healthy food. Then the university changed my life. Now I am just the IT guy who lifts only his laptop and runs mainly after leaving bus. At least I still have delight in walks.</p>
 
-<p>See my <a href="https://github.com/FrostyX/cv/raw/master/jakub-kadlcik-cv.pdf" title="Jakub Kadlčík - curriculum vitae">curriculum vitae</a>.</p>
+<p>See my <a href="https://github.com/FrostyX/cv/raw/master/jakub-kadlcik-cv.pdf" title="Jakub Kadlčík - curriculum vitae">curriculum vitae</a> or my <a href="/timeline/" title="Jakub Kadlčík - timeline">timeline</a>.</p>
