--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
 
 		<!-- Custom styles for this template -->
 		<link href="/css/style.css" rel="stylesheet">
+		<link href="/css/timeline.css" rel="stylesheet">
 
 		<!-- Font Awesome -->
 		<link rel="stylesheet" href="/bundle/font-awesome/css/font-awesome.min.css">
