Show articles link to github

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,11 @@ ul.nav a:hover
 	border-bottom: 1px solid #eee;
 }
 
+#posthead a
+{
+	color: black !important;
+}
+
 #content
 {
 	margin: 0 auto;
