--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,10 @@ layout: default
 	{% for category in page.categories %}
 		<button class="btn btn-default btn-xs">{{ category }}</button>
 	{% endfor %}
+
+	<a href="{{ site.github.repository_url }}/tree/master/{{ page.relative_path }}">
+		<i class="fa fa-github" aria-hidden="true"></i>
+	</a>
 	</span>
 
 </div>
