--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
 		<button class="btn btn-default btn-xs">{{ category }}</button>
 	{% endfor %}
 
-	<a href="{{ site.github.repository_url }}/tree/master/{{ page.relative_path }}">
+	<a href="https://github.com/frostyx/frostyx.github.io/tree/master/{{ page.relative_path }}">
 		<i class="fa fa-github" aria-hidden="true"></i>
 	</a>
 	</span>
