--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Tracer finds outdated running applications in your system.">
-		<meta name="keywords" content="tracer, needs-restarting" />
+		<meta name="description" content="My personal blog">
+		<meta name="keywords" content="frostyx, jakub, kadlcik, blog" />
 		<meta name="author" content="FrostyX">
 		<meta name="copyright" content="FrostyX" />
 		<meta name="robots" content="index,follow" />
