Add tags column in table header

--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,5 +1,5 @@
 <table class="table">
-	<thead><tr><th>Title</th><th>Created</th><th>Language</th></tr></thead>
+	<thead><tr><th>Title</th><th>Created</th><th>Language</th><th>Tags</th></tr></thead>
 	<tbody>
 		{% for post in site.posts limit:include.limit %}
 		<tr>
