Set dynamic title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 		<meta name="robots" content="index,follow" />
 		<link rel="icon" href="favicon.ico">
 
-		<title>FrostyX.cz</title>
+		<title>{{ page.title }} | FrostyX.cz</title>
 
 		<!-- Bootstrap core CSS -->
 		<link href="/bundle/bootstrap/css/bootstrap.min.css" rel="stylesheet">
