--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,9 @@
 		<!-- Font Awesome -->
 		<link rel="stylesheet" href="/bundle/font-awesome/css/font-awesome.min.css">
 
+		<!-- Bootstrap callout -->
+		<link href="/bundle/bs-callout/bs-callout.css" rel="stylesheet">
+
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
