Fix favicon link for subpages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 		<meta name="author" content="FrostyX">
 		<meta name="copyright" content="FrostyX" />
 		<meta name="robots" content="index,follow" />
-		<link rel="icon" href="favicon.ico">
+		<link rel="icon" href="/favicon.ico">
 
 		<title>{{ page.title }} | FrostyX.cz</title>
 
