--- a/css/style.css
+++ b/css/style.css
@@ -67,3 +67,22 @@ ul.nav a:hover
 {
 	margin: 20px;
 }
+
+.img-row
+{
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+}
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
