--- a/_includes/about/me.html
+++ b/_includes/about/me.html
@@ -1,3 +1,3 @@
-<p>My name is Jakub Kadlčík, but you may also know me as FrostyX. I am 26 years old and live around Olomouc city in Czech Republic. I am a computer nerd (read software engineer) with passion for strength sports such as powerlifting and Olympic weightlifting.</p>
+<p>My name is Jakub Kadlčík, but you may also know me as FrostyX. I am 26 years old and live around Olomouc city in the Czech Republic. I am a computer nerd (read software engineer) with a passion for strength sports such as powerlifting and Olympic weightlifting.</p>
 
 <p>See my <a href="https://github.com/FrostyX/cv/raw/master/jakub-kadlcik-cv.pdf" title="Jakub Kadlčík - curriculum vitae">curriculum vitae</a> or my <a href="/timeline/" title="Jakub Kadlčík - timeline">timeline</a>.</p>
