--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,13 @@
 
 		<title>{{ page.title }} | FrostyX.cz</title>
 
+		<!-- Meta properties for sharing previews -->
+		<meta property="og:url" content="{{ page.url }}"/>
+		<meta property="og:type" content="article" />
+		<meta property="og:title" content="{{ page.title }}" />
+		<meta property="og:description" content="{{ page.excerpt |strip_html }}" />
+		<meta property="og:image" content="files/img/frostyx.jpg" />
+
 		<!-- Bootstrap core CSS -->
 		<link href="/bundle/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
