--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 		<meta property="og:type" content="article" />
 		<meta property="og:title" content="{{ page.title }}" />
 		<meta property="og:description" content="{{ page.excerpt |strip_html }}" />
-		<meta property="og:image" content="{{ site.url }}/files/img/frostyx.jpg" />
+		<meta property="og:image" content="{{ site.url }}/files/img/frostyx-200-200.png" />
 
 		<!-- Bootstrap core CSS -->
 		<link href="/bundle/bootstrap/css/bootstrap.min.css" rel="stylesheet">
