Add gifplayer bundle

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,5 +99,12 @@
 		<!-- Google Code Prettify> -->
 		<link href="/bundle/google-code-prettify/hemisu-light.css" type="text/css" rel="stylesheet" />
 		<script src="/bundle/google-code-prettify/prettify.js" type="text/javascript"></script>
+
+		<!-- GifPlayer -->
+		<link href="/bundle/gifplayer/dist/gifplayer.css" rel="stylesheet">
+		<script src="/bundle/gifplayer/dist/jquery.gifplayer.js" type="text/javascript"></script>
+		<script>
+			$('.gifplayer').gifplayer();
+		</script>
 	</body>
 </html>
