--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,6 +100,10 @@
 		<link href="/bundle/google-code-prettify/hemisu-light.css" type="text/css" rel="stylesheet" />
 		<script src="/bundle/google-code-prettify/prettify.js" type="text/javascript"></script>
 
+		<!-- Rogue -->
+		<link href="/bundle/rogue-styles/github.css" rel="stylesheet">
+		<!-- <link href="/bundle/rogue-styles/base16.dark.css" rel="stylesheet"> -->
+
 		<!-- GifPlayer -->
 		<link href="/bundle/gifplayer/dist/gifplayer.css" rel="stylesheet">
 		<script src="/bundle/gifplayer/dist/jquery.gifplayer.js" type="text/javascript"></script>
