Add bootstrap-anchor plugin
https://bootstrap-anchor.com/

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -110,5 +110,21 @@
 		<script>
 			$('.gifplayer').gifplayer();
 		</script>
+
+		<!-- Tooltip -->
+		<script>
+			$(function () {
+				$('[data-toggle="tooltip"]').tooltip()
+			})
+		</script>
+
+		<!-- Anchor -->
+		<link href="/bundle/bootstrap-anchor/css/bootstrap-anchor.min.css" rel="stylesheet">
+		<script src="/bundle/bootstrap-anchor/js/bootstrap-anchor.min.js" type="text/javascript"></script>
+		<script>
+			$(function () {
+				$(document).anchor()
+			})
+		</script>
 	</body>
 </html>
