--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,7 +122,7 @@
 		<script src="/bundle/bootstrap-anchor/js/bootstrap-anchor.min.js" type="text/javascript"></script>
 		<script>
 			$(function () {
-				$(document).anchor()
+				$('h2, h3, h4, h5, h6').anchor()
 			})
 		</script>
 	</body>
