--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,6 +67,7 @@
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="/posts">Posts</a></li>
+							<li><a href="/tags">Tags</a></li>
 							<li><a href="/projects">Projects</a></li>
 							<li><a href="/contact">Contact</a></li>
 						</ul>
