Fix disqus top margin

--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,9 @@ ul.nav a:hover
 	margin-bottom: 50px;
 }
 
-#disqus_thread
+#disqus_recommendations
 {
-	margin-top: 50px;
+	margin-top: 100px;
 }
 
 .footer
