--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,15 +39,8 @@
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		<script defer src="https://cloud.umami.is/script.js" data-website-id="0dd1fdd5-8488-4204-a34b-3d39f0152923"></script>
 
-			ga('create', 'UA-40613574-1', 'auto');
-			ga('send', 'pageview');
-		</script>
 
 	</head>
 
