Oops, forgot leading slash

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 
-		<script src="js/uma.js" data-website-id="0dd1fdd5-8488-4204-a34b-3d39f0152923"></script>
+		<script src="/js/uma.js" data-website-id="0dd1fdd5-8488-4204-a34b-3d39f0152923"></script>
 
 
 	</head>
