--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,6 +65,7 @@
 							<li><a href="/posts">Posts</a></li>
 							<li><a href="/tags">Tags</a></li>
 							<li><a href="/projects">Projects</a></li>
+							<li><a href="/gear">Gear</a></li>
 							<li><a href="/contact">Contact</a></li>
 						</ul>
 					</div>
