--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="/posts">Posts</a></li>
 							<li><a href="/tags">Tags</a></li>
-							<li><a href="/projects">Projects</a></li>
+							<li><a href="https://github.com/FrostyX">Projects</a></li>
 							<li><a href="/gear">Gear</a></li>
 							<li><a href="/contact">Contact</a></li>
 						</ul>
