--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ html
 body
 {
 	margin-bottom: 60px;
+	font-size: 14px;
+	font-family: "Outfit", sans-serif;
+	/* TODO For titles, use	 "Lexend", sans-serif; */
 }
 
 #page
