Don't show languages

--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,5 +1,5 @@
 <table class="table">
-	<thead><tr><th>Title</th><th>Created</th><th>Language</th><th>Tags</th></tr></thead>
+	<thead><tr><th>Title</th><th>Published</th><th>Tags</th></tr></thead>
 	<tbody>
 		{% for post in site.posts limit:include.limit %}
 
@@ -13,7 +13,6 @@
 		<tr>
 			<td><a href="{{ post.url | prepend: site.baseurl }}" title="{{ post.title }}">{{ post.title }}</a></td>
 			<td>{{ post.date | date: "%d. %m. %Y" }}</td>
-			<td>{{ post.lang }}</td>
 			<td>
 				{% for tag in post.tags %}
 					<a class="btn btn-default btn-xs" href="/tag/{{ tag }}">{{ tag }}</a>
