--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,6 +63,7 @@
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="/posts">Posts</a></li>
+							<li><a href="/videos">Videos</a></li>
 							<li><a href="/tags">Tags</a></li>
 							<li><a href="https://github.com/FrostyX">Projects</a></li>
 							<li><a href="/gear">Gear</a></li>
